# image-compare-api

./: .env.template  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  compose.yaml  database.sqlite  openapi.yaml  openapi.yml
.sqlx/: query-1577188f201f57e3da3a30660fff0c580b29d0052ed81d00549eab5f2f5321f8.json  query-2bddf51f01612c438457e693ce519bdd16b6d7b9f19e6561d088ddce2603fb20.json  query-363faa05b6517e4a1031a2c4f1ec0c5b932977289c3785072b72cb6164570213.json  query-36985d897697853f5385673ead3ed8b512c7218e474467713873c02dc09bb6a8.json  query-3fe286b926ac88db60c3ad0e96d54fcf54a2df802ab47d37da63a9d1750c5e92.json  query-48de794e7fba440deb9e394658a71f8d2cd0ad68c09c0a3d02a83faac5deee92.json  query-5f529e43ea4b9bd81a6e1a93eba94e31c0112542fbffb7e2a749288e5f64b880.json  query-64076d423d1705604d344c6323e5fdf036eb61a8a14b006565eb0393fa390b60.json  query-78ae7dee87ecda821e5933c7c0b03413266724f294f9bd3885635edfcc629071.json  query-c68f87f269256d20295d160c87abf8217fabe825dd032bebabd90b873efaa801.json  query-d2f33b25208e8aeacc542e31768c6c70aa9e8807e88abca054f42f0cf3232875.json  query-dc9f5ed2ddb0853d522d1c094211697f0a2970ff436ebacfe39b94763f65b27b.json
fixtures/: admins.sql  comparisons.sql  users.sql  votes.sql
migrations/: 20231115161701_add_user.up.sql  20231210180256_add_comparison.down.sql  20231210180256_add_comparison.up.sql  20231210184627_add_vote.down.sql  20231210184627_add_vote.up.sql  20240516205309_add_admin.up.sql
src/: catchers.rs  lib.rs  logger.rs  main.rs  response.rs
tests/: comparison.rs  comparison_for_user_when_none_available.rs  comparison_for_user_with_correct_id.rs  comparison_for_user_with_incorrect_id.rs  (+31 more)
(+20 files in other folders)
