[package]
name = "image-compare-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "uuid", "secrets"] }
serde = { version = "=1.0.189", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
rand = "0.8"
dotenvy = "0.15"
log = "0.4"
fern = "0.6"
